# namada-trusted-setup

./: .dockerignore  .gitignore  .rusty-hook.toml  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  cohorts_schedule_emails.py  cohorts_tokens_generator.py  docker-compose.yml  install.sh  run.sh  rust-toolchain.toml  test.sh
.github/workflows/: build.yml  cli.yml  coordinator.yml  docker.yml  release.yml
docker/: Dockerfile  compile.sh
phase1/: Cargo.toml
phase1-cli/: Cargo.toml  README.md  ascii_logo.txt
phase1-cli/src/: ascii_logo.rs  keys.rs  lib.rs  requests.rs
phase1-cli/tests/: e2e.rs
phase1-coordinator/: Cargo.toml
phase1-coordinator/src/: coordinator.rs  coordinator_state.rs  environment.rs  io.rs  lib.rs  main.rs  rest.rs  rest_utils.rs  s3.rs  server.rs  tests.rs
phase1-coordinator/src/authentication/: production.rs
phase1-coordinator/src/commands/: aggregation.rs  computation.rs  initialization.rs  mod.rs  verification.rs
phase1-coordinator/src/objects/: contribution_info.rs  mod.rs  round.rs
phase1-coordinator/src/storage/: disk.rs  storage.rs
phase1-coordinator/src/testing/: coordinator.rs
phase1-coordinator/tests/: test_coordinator.rs
phase1-wasm/: Cargo.toml
phase1-wasm-keys/src/: lib.rs
phase1-wasm/src/: phase1.rs
phase1/benches/: phase1.rs
phase1/src/helpers/: converters.rs
phase2/: Cargo.toml
phase2-cli/: Cargo.toml  README.md
phase2-cli/src/: ascii_logo.rs  keys.rs  lib.rs  requests.rs
phase2-cli/tests/: e2e.rs
phase2-coordinator/: Cargo.toml  README.md
phase2-coordinator/src/: coordinator.rs  coordinator_state.rs  environment.rs  io.rs  macros.rs  main.rs  rest.rs  rest_utils.rs  s3.rs  tests.rs
phase2-coordinator/src/authentication/: mod.rs
phase2-coordinator/src/commands/: aggregation.rs  computation.rs  initialization.rs  verification.rs
phase2-coordinator/src/objects/: contribution_file_signature.rs  contribution_info.rs  participant.rs  round.rs  task.rs
phase2-coordinator/src/storage/: disk.rs  storage.rs
phase2-coordinator/src/testing/: coordinator.rs
phase2-coordinator/tests/: test_coordinator.rs
phase2/benches/: phase2.rs
phase2/src/: aggregation.rs  computation.rs  initialization.rs  key_generation.rs  lib.rs  serialization.rs  verification.rs
phase2/src/helpers/: accumulator.rs  buffers.rs  converters.rs  testing.rs
phase2/src/objects/: parameters.rs  public_key.rs
phase2/tests/: marlin.rs
scripts/: README.md  cohorts_schedule_emails.py  config.json.example  emails.csv.example  generate_tokens.py  pyproject.toml
setup-utils/: Cargo.toml
setup-utils/benches/: math.rs
setup-utils/src/: groth16_utils.rs
setup-utils/src/io/: mod.rs
setup1-contributor/src/commands/: contribute.rs
setup1-verifier/src/: verifier.rs
setup2/src/cli/: new.rs
