[workspace]
members = [
  "phase1-cli",
  "phase1",
  "phase1-cli",
  "phase1-coordinator",
  "phase1-wasm",
  "phase1-wasm-keys",
  "phase2",
  "setup1-cli-tools",
  "setup1-shared",
  "setup-utils",
]

[profile.release]
incremental = true
lto = true
opt-level = 3

[profile.bench]
debug = false
debug-assertions = false
incremental = true
lto = "thin"
opt-level = 3
rpath = false

[profile.dev]
opt-level = 0

[profile.test]
debug = true
debug-assertions = true
incremental = true
opt-level = 1
