[workspace]
members = [
  "phase1",
  "phase1-cli",
  "phase1-coordinator",
  "setup-utils",
]

[profile.release]
incremental = true
lto = true
opt-level = 3

[profile.bench]
debug = false
debug-assertions = false
incremental = true
lto = "thin"
opt-level = 3
rpath = false

[profile.dev]
opt-level = 0

[profile.test]
debug = true
debug-assertions = true
incremental = true
opt-level = 1
