[package]
name = "phase1-cli"
version = "0.3.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "CLI implementation of Phase 1"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
phase1 = { path = "../phase1" }
phase1-coordinator = { path = "../phase1-coordinator" }
setup-utils = { path = "../setup-utils" }
serde = "1.0.136"
snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "fc997c" }

anyhow = "1.0.57"
bs58 = "0.4.0"
base64 = "0.13.0"
chrono = "0.4"
ed25519-compact = "1.0.11"
fs-err = "2.6"
gumdrop = { version = "0.8.0" }
hex = { version = "0.4.2" }
memmap = { version = "0.7.0" }
rand = { version = "0.8" }
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
structopt = "0.3"
thiserror = "1.0.30"
tokio = "1.17.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

[dev-dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
wasm-bindgen-test = { version = "0.3.18" }
toml = "0.5.9"

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = []
cli = ["phase1/cli", "parallel", "setup-utils/cli"]
parallel = ["phase1/parallel", "setup-utils/parallel"]

[[bin]]
name = "phase1"
required-features = ["cli"]
