[package]
authors = ["The Aleo Team <hello@aleo.org>"]
description = "CLI implementation of Phase 1"
edition = "2018"
homepage = "https://github.com/AleoHQ/aleo-setup"
license = "MIT/Apache-2.0"
name = "phase1-cli"
repository = "https://github.com/AleoHQ/aleo-setup"
version = "1.0.0-beta.9"

[dependencies]
phase1 = {path = "../phase1"}
phase1-coordinator = {path = "../phase1-coordinator"}
serde = "1.0.136"
setup-utils = {path = "../setup-utils"}

anyhow = "1.0.57"
async-stream = "0.3.3"
bech32 = "0.9.0"
bs58 = "0.4.0"
bytes = "1.1.0"
chrono = "0.4"
crossterm = "0.24.0"
ed25519-compact = "1.0.11"
fs-err = "2.6"
futures-core = "0.3.21"
futures-util = "0.3.21"
hex = {version = "0.4.2"}
indicatif = "0.16.2"
memmap = {version = "0.7.0"}
orion = "0.17.1"
owo-colors = "3.4.0"
rand = {version = "0.8"}
regex = "1"
reqwest = {version = "0.11", features = ["brotli", "json", "stream"]}
rpassword = "7.0.0"
serde_json = "1.0.81"
sha2 = "0.10.2"
structopt = "0.3"
thiserror = "1.0.30"
tokio = "1.17.0"
tokio-util = {version = "0.7.3", features = ["io"]}
toml = "0.5.9"
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3", features = ["env-filter", "time"]}

[dev-dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
tempfile = "3.3.0"
toml = "0.5.9"
wasm-bindgen-test = {version = "0.3.18"}
zip = "0.6.2"

[build-dependencies]
rustc_version = "0.4.0"

[features]
cli = ["phase1/cli", "parallel", "setup-utils/cli", "phase1-coordinator/operator"]
default = []
parallel = ["phase1/parallel", "setup-utils/parallel", "phase1-coordinator/parallel"]

[[bin]]
name = "namada-ts"
required-features = ["cli"]
